# someip

./: .gitignore  AGENTS.md  README.md  project-scope  pyproject.toml
ADC40_SOC/: 0x080A.json  0x080C.json  0x080D.json  0x080E.json  0x0F01.json
docs/: mvp1-autosar-someip-compliance-verification-zh.md  mvp1-gui-real-someip-manual-verification-zh.md  mvp1-known-limits.md
docs/superpowers/plans/: 2026-05-13-someip-gui-test-tool-mvp1.md  2026-05-14-someipy-protocol-spike.md  2026-05-15-mvp1-runtime-gui-ops.md  2026-05-16-mvp1-someipy-adapter-phase-b.md  2026-05-17-mvp1-gui-definition-import.md  2026-05-17-mvp1-gui-runtime-execution.md  2026-05-17-mvp1-gui-runtime-review-fixes.md  2026-05-17-mvp1-role-aware-real-backend.md  2026-05-18-mvp1-real-backend-review-fixes.md  2026-05-18-mvp1-remaining-loop-closure.md  (+1 more)
packaging/pyinstaller/: someip-gui-tool.spec
scripts/: run_mvp1_acceptance.py  run_protocol_spike.py  run_someipy_spike.py
src/someip_gui_tool/: __init__.py  __main__.py
tests/: conftest.py  fakes_someipy_runtime.py  test_backend_capabilities.py  test_field_grouping.py  test_gui_app.py  test_gui_backend_factory.py  test_gui_payload_defaults.py  test_gui_smoke.py  test_mock_adapter.py  test_mvp1_acceptance_script.py  test_payload_codec.py  test_project_model.py  test_protocol_scenarios.py  test_protocol_spike_cli.py  test_runtime_config.py  test_runtime_session.py  test_service_json_parser.py  test_someipy_adapter.py  test_someipy_api.py  test_someipy_daemon.py  test_someipy_mapping.py  test_someipy_spike.py  test_spike_result.py  test_trace_exporters.py
(+37 files in other folders)
